--- a/MyAppEnglish/app/src/main/res/layout/layout_tab2.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab2.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvPraticar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="tab2" />
+        android:text="Praticar" />
+
+    <VideoView
+        android:id="@+id/vvPraticar"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
 </LinearLayout>
