--- a/MyAppEnglish/app/src/main/res/layout/layout_tab1.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,10 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 
-    <ListView
-        android:id="@+id/lvAssistir"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvAssistir"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
