--- a/MyAppEnglish/app/src/main/res/layout/layout_tab2.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab2.xml
@@ -15,9 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="150dp" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvTreinar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
