--- a/MyAppEnglish/app/src/main/res/layout/layout_tab1.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab1.xml
@@ -14,7 +14,8 @@
     <VideoView
         android:id="@+id/vvAssistir"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="150dp"
+        android:layout_gravity="center_vertical|center_horizontal" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvAssistir"
