--- a/MyAppEnglish/app/src/main/res/layout/activity_card_cenas.xml
+++ b/MyAppEnglish/app/src/main/res/layout/activity_card_cenas.xml
@@ -27,7 +27,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageCena"
                     android:layout_width="142dp"
                     android:layout_height="131dp"
                     app:srcCompat="@mipmap/ic_launcher" />
