--- a/MyAppEnglish/app/src/main/res/layout/activity_recycler_view_filmes.xml
+++ b/MyAppEnglish/app/src/main/res/layout/activity_recycler_view_filmes.xml
@@ -11,9 +11,10 @@
         android:id="@+id/textViewFilme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_shadow_start_color"
+        android:background="@android:color/black"
         android:text="FILMES"
         android:textAlignment="center"
+        android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="8dp"
