--- a/MyAppEnglish/app/src/main/res/layout/activity_tab.xml
+++ b/MyAppEnglish/app/src/main/res/layout/activity_tab.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TabActivity">
+    tools:context=".view.TabActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
