--- a/MyAppEnglish/app/src/main/res/layout/layout_tab1_card.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab1_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="myapplocation.jose.myappenglish.TabActivity">
+    tools:context="myapplocation.jose.myappenglish.view.TabActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cvTab1"
