--- a/MyAppEnglish/app/src/main/res/layout/layout_tab4.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab4.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"
+        android:text="ASSISTIR"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="36sp"
+        android:textStyle="bold" />
+
     <VideoView
         android:id="@+id/vvMeusVideos"
         android:layout_width="match_parent"
