--- a/MyAppEnglish/app/src/main/res/layout/layout_tab3.xml
+++ b/MyAppEnglish/app/src/main/res/layout/layout_tab3.xml
@@ -51,9 +51,18 @@
         android:id="@+id/btGravacaoOuvir"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
+        android:background="@android:color/holo_orange_dark"
         android:text="Ouvir Personagem"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorAccent"
+        android:text="OUVIR MINHA FALA"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -82,7 +91,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/holo_green_dark"
         android:text="Cancelar"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold" />
 
